# teamtomo

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/scripts/: find_affected_packages.py  find_packages_to_test.py  find_packages_to_test_and_deploy.py
.github/workflows/: ci.yml
docs/: index.md
docs/examples/: fit_2dtm_peaks.ipynb
notes/: migrate-existing-repo.md  migration-progress.md  package-versioning-policy.md
scripts/: check_teamtomo_dependencies.py
src/teamtomo/: __init__.py
src/torch_ctf/: ctf_1d.py
src/torch_find_peaks/: gaussians.py
tests/: _utils.py  test_refine_peaks.py
