[project]
name = "teamtomo"
description = "Modular Python packages for cryo-EM and cryo-ET"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "TeamTomo Developers" },
    { name = "Alister Burt", email = "alisterburt@gmail.com" },
    { name = "Matthew Giammar", email = "mdgiammar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch-grid-utils",
    "torch-affine-utils",
    "torch-image-interpolation",
    "torch-transform-image",
    "torch-so3",
    "torch-fourier-shift",
    "torch-fourier-rescale",
    "torch-subpixel-crop",
    "torch-fourier-slice",
    "torch-ctf",
    "torch-fourier-filter",
    "torch-fourier-shell-correlation",
    "torch-cubic-spline-grids",
    "torch-find-peaks",
    "torch-tilt-series",
]

[tool.uv.sources]
torch-grid-utils = { workspace = true }
torch-affine-utils = { workspace = true }
torch-image-interpolation = { workspace = true }
torch-transform-image = { workspace = true }
torch-so3 = { workspace = true }
torch-fourier-shift = { workspace = true }
torch-fourier-rescale = { workspace = true }
torch-subpixel-crop = { workspace = true }
torch-fourier-slice = { workspace = true }
torch-ctf = { workspace = true }
torch-fourier-filter = { workspace = true }
torch-fourier-shell-correlation = { workspace = true }
torch-cubic-spline-grids = { workspace = true }
torch-find-peaks = { workspace = true }
torch-tilt-series = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/io/*",
    "packages/primitives/*",
    "packages/algorithms/*",
    "packages/wip/*"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"
tag-pattern = "^teamtomo@v(?P<version>.+)$"
fallback-version = "0.0.1"


[dependency-groups]
test = ["pytest", "pytest-cov"]
dev = [
    "pytest",
    "pytest-cov",
    "ipython",
    "mypy",
    "pdbpp",
    "pre-commit",
    "rich",
    "ruff",
]